add my directory structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,9 @@
       "sortAttributes": false
     }
   },
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
   "editor.detectIndentation": true,
   "editor.tabSize": 2,
-  "javascript.format.semicolons": "remove"
+  "javascript.format.semicolons": "remove",
+  "prettier.enable": false
 }
